Improved build.
Signed-off-by: Paulo Pires <pjpires@gmail.com>